<resources>
    <string name="app_name">Todoz</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Logout</string>
    <string name="title_activity_todo_list">TodoListActivity</string>
    <string name="titulo_dialog">Adicionar tarefa</string>
    <string name="adicionar_btn">Adicionar</string>
    <string name="cancelar_btn">Cancelar</string>
    <string name="tela_criarconta">Criar Conta</string>
    <string name="digite_aqui">Digite tafera aqui</string>
    <string name="btn_login">Login</string>
    <string name="esqueci_senha">Esqueci  a senha</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="title_activity_criar_conta">CriarContaActivity</string>
    <string name="criar_conta">Criar conta</string>
    <string name="text_btn_login">Já possui conta? faça o login</string>
    <string name="title_activity_esqueci_senha">EsqueciSenhaActivity</string>
    <string name="digite_email">Digite seu email</string>
    <string name="informe_senha">Favor informe sua senha!</string>
    <string name="informe_senha_6">Informe com mais de 6 digitos</string>
    <string name="falha_auth">Falha na autenticação</string>
    <string name="minimo_senha">Sua senha deve ser preenchida corretamente</string>
    <string name="reset">Recuperar senha</string>
    <string name="enviamos_email">Foi enviado um link de recuperação de senha para o seu email!</string>
    <string name="falha_no_envio">Falha no envio, porfavor tente novemente!</string>
    <string name="esqueceu">Esqueceu a senha?</string>
    <string name="deixe_seuemail">Lembra aquele email que cadastrou sua conta? Então use o mesmo para enviarmos instruções de como recuperar sua senha.</string>
    <string name="texto_teste">Tarefa adicionado com sucesso! </string>
    <string name="ed_campo_tarefa">Digite sua tarefa</string>
    <string name="task_title">Tarefas do dia</string>
    <string name="selecione_action">Selecione uma ação</string>
</resources>
