<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textInputLayout6">

        <EditText
            android:id="@+id/ed_campo_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_aqui" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_cancelar_dialog"
        android:background="@android:color/transparent"
        android:textColor="@color/colorGrey"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar_btn"
        android:layout_alignBaseline="@+id/btn_adicionar_tarefa_dialog"
        android:layout_alignBottom="@+id/btn_adicionar_tarefa_dialog"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_adicionar_tarefa_dialog"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorBranco"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="178dp"
        android:text="@string/adicionar_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />




</RelativeLayout>
